LAGrammarParser.py
# Generated from LAGrammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LAGrammarParser ( Parser ):

    grammarFileName = "LAGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'algoritmo'", "'fim_algoritmo'", "'declare'", 
                     "','", "'leia'", "'('", "')'", "'.'", "'escreva'", 
                     "'\"'", "'<-'", "'se'", "'entao'", "'senao'", "'fim_se'", 
                     "'faca'", "'ate'", "'enquanto '", "'fim_enquanto'", 
                     "'para'", "'passo'", "'fim_para'", "'retorne'", "'caso'", 
                     "'seja'", "'fim_caso'", "'..'", "'+'", "'-'", "'ou'", 
                     "'*'", "'/'", "'>'", "'<'", "'>='", "'<='", "'='", 
                     "'literal'", "'inteiro'", "'real'", "'logico'", "'registro'", 
                     "'fim_registro'", "'e'", "'nao'", "'tipo'", "'constante'", 
                     "'['", "']'", "'^'", "'&'", "'var'", "'procedimento'", 
                     "'fim_procedimento'", "'funcao'", "'fim_funcao'", "'{'", 
                     "'}'", "':'", "'<>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "DOISPONTOS", 
                      "DIFERENTE", "IDENT", "CADEIA", "LOGICO", "NUM_INT", 
                      "NUM_REAL", "WS", "COMMENTS", "ErrorChar" ]

    RULE_programa = 0
    RULE_declaracoes = 1
    RULE_decl_local_global = 2
    RULE_declaracao_local = 3
    RULE_declaracao_global = 4
    RULE_declaracoes_variaveis = 5
    RULE_declaracao_registro = 6
    RULE_declaracao_variavel = 7
    RULE_identificadores = 8
    RULE_corpo = 9
    RULE_comandos = 10
    RULE_comando = 11
    RULE_leia_cmd = 12
    RULE_coordenadas = 13
    RULE_escreva_cdm = 14
    RULE_mensagem_literal = 15
    RULE_atribuicao_cmd = 16
    RULE_chamada_funcao_cmd = 17
    RULE_chamada_tipo_cdm = 18
    RULE_chamada_procedimento_cmd = 19
    RULE_argumentos = 20
    RULE_cmd_condicional = 21
    RULE_cmd_faca = 22
    RULE_cmd_enquanto = 23
    RULE_cmd_para = 24
    RULE_retorno = 25
    RULE_caso_cmd = 26
    RULE_intervalo = 27
    RULE_expressao = 28
    RULE_literal = 29
    RULE_tipo = 30
    RULE_operacao = 31
    RULE_operando = 32
    RULE_termo = 33
    RULE_fator = 34
    RULE_registro = 35
    RULE_termo_logico = 36
    RULE_fator_logico = 37
    RULE_parcela_logica = 38
    RULE_expressao_relacional = 39
    RULE_expressao_aritmetica = 40
    RULE_campos_registro = 41
    RULE_campo_registro = 42
    RULE_declaracao_tipo = 43
    RULE_declaracoes_tipos = 44
    RULE_declaracao_tipo_lista = 45
    RULE_identificador = 46
    RULE_constante = 47
    RULE_dimensao = 48
    RULE_ponteiro = 49
    RULE_logico = 50
    RULE_endereco = 51
    RULE_operador = 52
    RULE_parametros = 53
    RULE_parametro = 54
    RULE_procedimento = 55
    RULE_funcao = 56
    RULE_bloco = 57

    ruleNames =  [ "programa", "declaracoes", "decl_local_global", "declaracao_local", 
                   "declaracao_global", "declaracoes_variaveis", "declaracao_registro", 
                   "declaracao_variavel", "identificadores", "corpo", "comandos", 
                   "comando", "leia_cmd", "coordenadas", "escreva_cdm", 
                   "mensagem_literal", "atribuicao_cmd", "chamada_funcao_cmd", 
                   "chamada_tipo_cdm", "chamada_procedimento_cmd", "argumentos", 
                   "cmd_condicional", "cmd_faca", "cmd_enquanto", "cmd_para", 
                   "retorno", "caso_cmd", "intervalo", "expressao", "literal", 
                   "tipo", "operacao", "operando", "termo", "fator", "registro", 
                   "termo_logico", "fator_logico", "parcela_logica", "expressao_relacional", 
                   "expressao_aritmetica", "campos_registro", "campo_registro", 
                   "declaracao_tipo", "declaracoes_tipos", "declaracao_tipo_lista", 
                   "identificador", "constante", "dimensao", "ponteiro", 
                   "logico", "endereco", "operador", "parametros", "parametro", 
                   "procedimento", "funcao", "bloco" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    DOISPONTOS=59
    DIFERENTE=60
    IDENT=61
    CADEIA=62
    LOGICO=63
    NUM_INT=64
    NUM_REAL=65
    WS=66
    COMMENTS=67
    ErrorChar=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes(self):
            return self.getTypedRuleContext(LAGrammarParser.DeclaracoesContext,0)


        def corpo(self):
            return self.getTypedRuleContext(LAGrammarParser.CorpoContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = LAGrammarParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.declaracoes()
            self.state = 117
            self.match(LAGrammarParser.T__0)
            self.state = 118
            self.corpo()
            self.state = 119
            self.match(LAGrammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_local_global(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.Decl_local_globalContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.Decl_local_globalContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes" ):
                listener.enterDeclaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes" ):
                listener.exitDeclaracoes(self)




    def declaracoes(self):

        localctx = LAGrammarParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 45247102506237960) != 0):
                self.state = 121
                self.decl_local_global()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_local_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_global(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracao_globalContext,0)


        def declaracao_local(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracao_localContext,0)


        def constante(self):
            return self.getTypedRuleContext(LAGrammarParser.ConstanteContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_decl_local_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_local_global" ):
                listener.enterDecl_local_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_local_global" ):
                listener.exitDecl_local_global(self)




    def decl_local_global(self):

        localctx = LAGrammarParser.Decl_local_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl_local_global)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.declaracao_global()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.declaracao_local()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.constante()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_localContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_variavel(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracao_variavelContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracao_local

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_local" ):
                listener.enterDeclaracao_local(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_local" ):
                listener.exitDeclaracao_local(self)




    def declaracao_local(self):

        localctx = LAGrammarParser.Declaracao_localContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao_local)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(LAGrammarParser.T__2)
            self.state = 133
            self.declaracao_variavel()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes_variaveis(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracoes_variaveisContext,0)


        def procedimento(self):
            return self.getTypedRuleContext(LAGrammarParser.ProcedimentoContext,0)


        def funcao(self):
            return self.getTypedRuleContext(LAGrammarParser.FuncaoContext,0)


        def declaracao_tipo(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracao_tipoContext,0)


        def declaracao_registro(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracao_registroContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracao_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_global" ):
                listener.enterDeclaracao_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_global" ):
                listener.exitDeclaracao_global(self)




    def declaracao_global(self):

        localctx = LAGrammarParser.Declaracao_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracao_global)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.declaracoes_variaveis()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.procedimento()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.funcao()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 138
                self.declaracao_tipo()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                self.declaracao_registro()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracoes_variaveisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_variavel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.Declaracao_variavelContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.Declaracao_variavelContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracoes_variaveis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes_variaveis" ):
                listener.enterDeclaracoes_variaveis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes_variaveis" ):
                listener.exitDeclaracoes_variaveis(self)




    def declaracoes_variaveis(self):

        localctx = LAGrammarParser.Declaracoes_variaveisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaracoes_variaveis)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(LAGrammarParser.T__2)
            self.state = 143
            self.declaracao_variavel()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 144
                self.match(LAGrammarParser.T__3)
                self.state = 145
                self.declaracao_variavel()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_registroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self):
            return self.getTypedRuleContext(LAGrammarParser.IdentificadorContext,0)


        def DOISPONTOS(self):
            return self.getToken(LAGrammarParser.DOISPONTOS, 0)

        def registro(self):
            return self.getTypedRuleContext(LAGrammarParser.RegistroContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracao_registro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_registro" ):
                listener.enterDeclaracao_registro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_registro" ):
                listener.exitDeclaracao_registro(self)




    def declaracao_registro(self):

        localctx = LAGrammarParser.Declaracao_registroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaracao_registro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(LAGrammarParser.T__2)
            self.state = 152
            self.identificador()
            self.state = 153
            self.match(LAGrammarParser.DOISPONTOS)
            self.state = 154
            self.registro()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_variavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificadores(self):
            return self.getTypedRuleContext(LAGrammarParser.IdentificadoresContext,0)


        def DOISPONTOS(self):
            return self.getToken(LAGrammarParser.DOISPONTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(LAGrammarParser.TipoContext,0)


        def declaracao_tipo(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracao_tipoContext,0)


        def registro(self):
            return self.getTypedRuleContext(LAGrammarParser.RegistroContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracao_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_variavel" ):
                listener.enterDeclaracao_variavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_variavel" ):
                listener.exitDeclaracao_variavel(self)




    def declaracao_variavel(self):

        localctx = LAGrammarParser.Declaracao_variavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declaracao_variavel)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [61]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.identificadores()
                self.state = 157
                self.match(LAGrammarParser.DOISPONTOS)
                self.state = 158
                self.tipo()
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.declaracao_tipo()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.registro()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentificadoresContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.IdentificadorContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.IdentificadorContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_identificadores

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentificadores" ):
                listener.enterIdentificadores(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentificadores" ):
                listener.exitIdentificadores(self)




    def identificadores(self):

        localctx = LAGrammarParser.IdentificadoresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_identificadores)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.identificador()
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 165
                self.match(LAGrammarParser.T__3)
                self.state = 166
                self.identificador()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CorpoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_local(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.Declaracao_localContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.Declaracao_localContext,i)


        def comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.ComandosContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.ComandosContext,i)


        def funcao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.FuncaoContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.FuncaoContext,i)


        def procedimento(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.ProcedimentoContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.ProcedimentoContext,i)


        def registro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.RegistroContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.RegistroContext,i)


        def declaracao_tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.Declaracao_tipoContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.Declaracao_tipoContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_corpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCorpo" ):
                listener.enterCorpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCorpo" ):
                listener.exitCorpo(self)




    def corpo(self):

        localctx = LAGrammarParser.CorpoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_corpo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2352079672211477032) != 0):
                self.state = 178
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 172
                    self.declaracao_local()
                    pass

                elif la_ == 2:
                    self.state = 173
                    self.comandos()
                    pass

                elif la_ == 3:
                    self.state = 174
                    self.funcao()
                    pass

                elif la_ == 4:
                    self.state = 175
                    self.procedimento()
                    pass

                elif la_ == 5:
                    self.state = 176
                    self.registro()
                    pass

                elif la_ == 6:
                    self.state = 177
                    self.declaracao_tipo()
                    pass


                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.ComandoContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.ComandoContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)




    def comandos(self):

        localctx = LAGrammarParser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comandos)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.comando()
            self.state = 187
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 184
                    self.comando() 
                self.state = 189
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def caso_cmd(self):
            return self.getTypedRuleContext(LAGrammarParser.Caso_cmdContext,0)


        def leia_cmd(self):
            return self.getTypedRuleContext(LAGrammarParser.Leia_cmdContext,0)


        def escreva_cdm(self):
            return self.getTypedRuleContext(LAGrammarParser.Escreva_cdmContext,0)


        def cmd_para(self):
            return self.getTypedRuleContext(LAGrammarParser.Cmd_paraContext,0)


        def atribuicao_cmd(self):
            return self.getTypedRuleContext(LAGrammarParser.Atribuicao_cmdContext,0)


        def chamada_tipo_cdm(self):
            return self.getTypedRuleContext(LAGrammarParser.Chamada_tipo_cdmContext,0)


        def declaracao_tipo(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracao_tipoContext,0)


        def chamada_procedimento_cmd(self):
            return self.getTypedRuleContext(LAGrammarParser.Chamada_procedimento_cmdContext,0)


        def registro(self):
            return self.getTypedRuleContext(LAGrammarParser.RegistroContext,0)


        def chamada_funcao_cmd(self):
            return self.getTypedRuleContext(LAGrammarParser.Chamada_funcao_cmdContext,0)

